=== master

* Support :without_overlaps primary_key and unique option for WITHOUT OVERLAPS on PostgreSQL 18+ (jeremyevans)

=== 5.94.0 (2025-07-01)

* Support ALTER TABLE ALTER CONSTRAINT on PostgreSQL using alter_table alter_constraint method (jeremyevans)

* Add Dataset#for_no_key_update and #for_key_share on PostgreSQL (jeremyevans)

* Cache Dataset#nolock on Microsoft SQL Server (jeremyevans)

* Cache Dataset#for_share on PostgreSQL and MySQL (jeremyevans)

* Include :validated and :enforced entries for Database#check_constraints on PostgreSQL (jeremyevans)

* Include :validated and :enforced entries for Database#{,reversed_}foreign_key_list on PostgreSQL (jeremyevans)

* Support :not_enforced check and foreign key constraint option for NOT ENFORCED on PostgreSQL 18+ (jeremyevans)

* Support :primary_key and :unique column options accepting hash value for constraint options (jeremyevans)

* Consider all unique constraints when marking columns as non-NULL on DB2 (jeremyevans)

* Numerous minor performance improvements, mostly from rubocop-performance (jeremyevans)

=== 5.93.0 (2025-06-01)

* Add support to Dataset#explain for all PostgreSQL EXPLAIN options (jeremyevans)

* Make Dataset#{explain,analyze} work with the pg_auto_parameterize extension (jeremyevans)

* Support multilevel qualified identifiers in Database#create_table (jeremyevans)

* Add Sequel::OLD and Sequel::NEW constants, for use in RETURNING statements on PostgreSQL 18+ (jeremyevans)

* Fix SQL::QualifiedIdentifier handling of SQL::Identifier wrapping LiteralString values (jeremyevans)

* Fix literalization of SQL::Identifier wrapping LiteralString values (jeremyevans)

* Add Dataset#prepare_sql_type for setting the SQL type to use for prepare/call (jeremyevans)

=== 5.92.0 (2025-05-01)

* Use a qualified primary key for Model.paged_each and for the paged_operations plugin when using joined datasets (jeremyevans, davekaro) (#2299, #2300)
